--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ experience.
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2023</span> Aditya Majumdar
+                        Copyright &copy; <span id="current-year">2023</span> Ansh Agarwal
                     </p>
                 </div>
                 <div class="col-sm-2 top">
