--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <h1>Ansh Agarwal</h1>
             <h2>CSE Student</h2>
             <a href="https://drive.google.com/file/d/1JZ6VLrRdbjdR9YaRZqTEN8wrNQlbMy16/view?usp=share_link" target=”_blank” class="btn-rounded-white">View Resume</a>
+            <a href="https://drive.google.com/file/d/1xCG8e52-EP-DrDT4n0ZznZugyzbXiGaQ/view?usp=share_link" target=”_blank” class="btn-rounded-white">View DAA Assignment</a>
         </div>
         <!-- End #lead-content -->
 
@@ -243,7 +244,7 @@ experience.
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2023</span> Ansh Agarwal
+                        Copyright &copy; <span id="current-year">2023</span> Aditya Majumdar
                     </p>
                 </div>
                 <div class="col-sm-2 top">
